complete mobile version

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
+    rel="stylesheet">
   
   <title>Frontend Mentor | 3-column preview card component</title>
 
@@ -16,23 +20,32 @@
 </head>
 <body>
   <div class="panel-table">
-    <div class="rental-type">
+    <div class="rental-type sedans-type">
+      <img src="./images/icon-sedans.svg" alt=""class="img-sedans">
       <h2 class="type-header">Sedans</h2>
       <p class="type-info">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
   or on your next road trip.</p>
-      <a href="#/" class="rental-button">Learn More</a>
+      <br>
+      <br>
+      <a href="#/" class="rental-button sedans-link">Learn More</a>
     </div>
-    <div class="rental-type">
+    <div class="rental-type suv-type">
+      <img src="./images/icon-suvs.svg" alt="" class="img-sedans">
       <h2 class="type-header">SUVs</h2>
       <p class="type-info">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
       and off-road adventures.</p>
-      <a href="#/" class="rental-button">Learn More</a>
+      <br>
+      <br>
+      <a href="#/" class="rental-button suv-link">Learn More</a>
     </div>
-    <div class="rental-type">
+    <div class="rental-type luxury-type">
+      <img src="./images/icon-luxury.svg" alt="" class="img-luxury">
       <h2 class="type-header">Luxury</h2>
       <p class="type-info">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
       rental and arrive in style.</p>
-      <a href="#/" class="rental-button">Learn More</a>
+      <br>
+      <br>
+      <a href="#/" class="rental-button luxury-link">Learn More</a>
     </div>
   </div>
   <div class="attribution">
